package(default_visibility = ["//teams/team-2/remix-app:__subpackages__"])

load("@aspect_rules_js//js:defs.bzl", "js_library")

SRC_PATTERNS = [
    "**/*.tsx",
    "**/*.css",
]

js_library(
    name = "app",
    srcs = glob(SRC_PATTERNS),
    deps = [
        "//teams/team-2/remix-app:node_modules/@remix-run/react",
    ],
)
